@@ -6,6 +6,9 @@ Changes in @NEW@:
     * The RemoveNonPackageFiles policy now removes fonts.cache*,
       fonts.dir, and fonts.scale files, since they are always
       handled by tag handlers.
+    * The Make() build action can now take a makeName keyword argument
+      for cases when the normal Make() handling is exactly right but
+      a different make program is required (nmake, qmake, etc.)
 
 Changes in 0.80.4:
   o Build Changes:
